[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/enemy/enemy_ship.gd" type="Script" id=1]
[ext_resource path="res://scenes/effect/explosion_effect.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("LeftPropellant/Texture:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightPropellant/Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LeftPropellant/Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "propellant"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RightPropellant/Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftPropellant/Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="EnemyTemplate" type="Area2D" groups=["enemy_ship"]]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )
explosion = ExtResource( 2 )
spawn_chance = [ 0, 0 ]

[node name="Texture" type="Sprite" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="Notifier" type="VisibilityNotifier2D" parent="."]

[node name="WeaponManager" type="Node2D" parent="."]

[node name="Weapon1" type="Position2D" parent="WeaponManager"]

[node name="Weapon2" type="Position2D" parent="WeaponManager"]
visible = false

[node name="Weapon3" type="Position2D" parent="WeaponManager"]
visible = false

[node name="AttackTimer" type="Timer" parent="."]

[node name="ShipPropellant" type="Node2D" parent="."]

[node name="LeftPropellant" type="Position2D" parent="ShipPropellant"]

[node name="Texture" type="Sprite" parent="ShipPropellant/LeftPropellant"]
hframes = 4

[node name="RightPropellant" type="Position2D" parent="ShipPropellant"]

[node name="Texture" type="Sprite" parent="ShipPropellant/RightPropellant"]
hframes = 4

[node name="Animation" type="AnimationPlayer" parent="ShipPropellant"]
autoplay = "propellant"
anims/RESET = SubResource( 2 )
anims/propellant = SubResource( 1 )

[connection signal="screen_entered" from="Notifier" to="." method="on_screen_entered"]
[connection signal="screen_exited" from="Notifier" to="." method="on_screen_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="on_attack_timer_timeout"]
